kustomize/overlays/prod/deployment-label-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-submission-api
  namespace: grade-demo
spec:
  selector:
    matchLabels:
      app: prod-grade-submission
  template:
    metadata:
      labels:
        app: prod-grade-submission
