kustomize/overlays/prod/service-selector-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-api
  namespace: grade-demo
spec:
  selector:
    app: prod-grade-submission
